# construction_ppe_detection

./: .gitignore  README.md  inference.py  main.py  pyproject.toml  reid_manger.py  requirements.txt
backend/: fastapi_main.py  pipeline_service.py
database/: database.py
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/webcam/: page.tsx
frontend/src/components/dashboard/: ViolationSidebar.tsx
frontend/src/components/video/: LiveStream.tsx  WebcamStream.tsx
frontend/src/lib/: api.ts
frontend/src/store/: useViolationStore.ts
